--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="bg-gray-100">
 	<div class="lg:grid lg:grid-cols-2 xl:grid-cols-5">
-		<div class="px-8 py-12 space-y-5 max-w-md mx-auto lg:max-w-lg lg:px-12 lg:py-24 xl:col-span-2">
+		<div class="px-8 py-12 space-y-5 sm:max-w-2xl max-w-md mx-auto lg:max-w-lg lg:px-12 lg:py-24 xl:col-span-2">
 			<img class="h-10" src="./img/logo.svg" alt="logo">
 			<img class="rounded-lg shadow-lg lg:hidden" src="./img/beach-work.jpg" alt="beach-work">
 			<h1 class="text-2xl font-bold text-gray-900">
